<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainscreenlayout"
    android:background="@color/black"
    tools:context=".MainScreen">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/your_pick_of_rides_at_nlow_prices"
        android:textColor="#3aa8c1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/as"
        android:id="@+id/bgmain"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="13dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#708090"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgmain">

        <EditText
            android:id="@+id/startlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:drawableStart="@drawable/baseline_location_on_24"
            android:drawableEnd="@drawable/baseline_swap_vert_24"
            android:enabled="false"
            android:text="@string/my_location_here"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text" />

        <EditText
            android:id="@+id/destinationlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/black"
            android:textSize="15sp"
            android:drawableStart="@drawable/baseline_location_on_24"
            android:enabled="false"
            android:text="@string/my_location_here"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/today"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/baseline_calendar_month_24" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/rounded_corner2"
            android:backgroundTint="#47C1D2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:text="@string/find_captain"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
