<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginbg"
        android:id="@+id/registerlayout"
        tools:context=".ForgetPasswordFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:id="@+id/mainlayout"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <LinearLayout
                android:id="@+id/mobileNumberScreen"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:visibility="visible"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/bikebg"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Welcome to ApniSawari"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/work_sans_semibold"
                    android:textColor="@color/black"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apnisawari"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    android:textStyle="bold"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_phone_number_to_get_otp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:backgroundTint="@color/black"
                    android:hint="   Phone"
                    android:layout_marginTop="25dp"
                    android:textSize="20sp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:backgroundTint="@color/black"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:textColor="@color/black"
                        android:textColorHint="#808080" />
                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/side_round"
                    android:layout_marginTop="20dp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:id="@+id/btngetotp"
                    android:background="@drawable/rounded_corner2"
                    android:backgroundTint="#47C1D2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="30dp"
                        android:gravity="center"
                        android:text="@string/get_otp"
                        android:fontFamily="@font/dm_sans_medium"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintotp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/white"
                android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
                tools:context=".navigation_view.home.view.OtpFragment">

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="50dp"
                    android:text="ENTER OTP"
                    android:textColor="@color/black"
                    android:textSize="50sp"
                    android:fontFamily="@font/work_sans_semibold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_title2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:text="Please enter the verification code sent to your number"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cons_edtotp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title2">

                    <EditText
                        android:id="@+id/edt1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/otp_block"
                        android:backgroundTint="@color/otpblock"
                        android:ems="10"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1"
                        android:minWidth="30dp"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toStartOf="@+id/edt2"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edt2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/otp_block"
                        android:backgroundTint="@color/otpblock"
                        android:ems="10"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1"
                        android:minWidth="30dp"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toStartOf="@+id/edt3"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/edt1"
                        app:layout_constraintTop_toTopOf="parent" />


                    <EditText
                        android:id="@+id/edt3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/otp_block"
                        android:backgroundTint="@color/otpblock"
                        android:ems="10"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1"
                        android:minWidth="30dp"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toStartOf="@+id/edt4"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/edt2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt4"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/otp_block"
                        android:backgroundTint="@color/otpblock"
                        android:ems="10"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1"
                        app:boxStrokeColor="#47C1D2"
                        android:minWidth="30dp"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toStartOf="@+id/edt5"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/edt3"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edt5"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/otp_block"
                        android:backgroundTint="@color/otpblock"
                        android:ems="10"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1"
                        android:minWidth="30dp"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toStartOf="@+id/edt6"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/edt4"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edt6"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/otp_block"
                        android:backgroundTint="@color/otpblock"
                        android:ems="10"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1"
                        android:minWidth="30dp"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/edt5"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/txt_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="15dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cons_edtotp" />

                <TextView
                    android:id="@+id/txt_timer_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_resend_otp_title" />

                <TextView
                    android:id="@+id/txt_resend_otp_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="Didn’t receive OTP ?"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/txt_resend_otp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_timer" />

                <TextView
                    android:id="@+id/txt_resend_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="17dp"
                    android:text="resend"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/txt_resend_otp_title"
                    app:layout_constraintTop_toBottomOf="@+id/txt_timer" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:id="@+id/btnsubmitotp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_resend_otp"
                    android:background="@drawable/rounded_corner2"
                    android:backgroundTint="#47C1D2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="30dp"
                        android:gravity="center"
                        android:text="Submit OTP"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/mainlayout"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="Register as Driver"
            android:textAllCaps="false"
            android:id="@+id/registerasdriver"
            android:fontFamily="@font/dm_sans_medium"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#47C1D2"/>
        <androidx.core.widget.ContentLoadingProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
